--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@ async function startScrollAndTTS(text) {
 
     // 1초 지연 후 TTS 재생
     setTimeout(() => {
+      audioEl.volume = 0.3; // 0.0 = 무음, 1.0 = 최대음량
       audioEl.play().catch(err => console.warn(err));
     }, 0); //1000 = 1초
   };
