--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body {
 const newsEl = document.getElementById("news");
 const audioEl = document.getElementById("ttsAudio");
 
-const NEWS_API = "https://newstts-production-b5a7.up.railway.app/news";
-const TTS_API = "https://newstts-production-b5a7.up.railway.app/news-tts";
+const NEWS_API = "https://newstts-production.up.railway.app/news";
+const TTS_API = "https://newstts-production.up.railway.app/news-tts";
 
 // 뉴스 불러오기
 async function loadNews() {
